# camera-trap-image-name-extractor

./: .gitignore  README.md  pyproject.toml
src/camera_trap_image_name_extractor/: __init__.py
